Adding homepage slider and uncss Grunt Task output, as well as markup for academy page

--- a/index.html
+++ b/index.html
@@ -4,58 +4,102 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Foundation project</title>
+    <title>Team 4814 static</title>
     <link rel="stylesheet" href="css/font-awesome.min.css"/>
     <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" href="css/app_override.css">
     <script src="js/vendor/modernizr.js"></script>
   </head>
 <body>
-  <header>
-    <div class="small-12 large-12 columns" id="top-bar">
-      <div class="logo wrapper">
-        <img src="images/logo.png">
+  <div class="row">
+    <header class="small-12 medium-12 large-12 columns">
+        <div class="small-6 large-3 columns">
+          <div class="logo wrapper">
+            <img src="images/logo.png">
+          </div>
+        </div>
+        <nav class="show-for-large-up large-7 columns right">
+          <ul>
+            <li><a href="about.html">About<a></li>
+            <li><a href="media.html">Media</a></li>
+            <li><a href="resources.html">Resources</a></li>
+            <li><a href="sponsors.html">Sponsors</a></li>
+            <li><a href="involvement.html">Involvement</a></li>
+            <li><a href="robot.html">Robot</a></li>
+          </ul>
+        </nav>
+    </header>
+  </div>
+
+  <!-- Slide Section -->
+  <div class="viewport">
+    <div class="slideshow">
+      <div class="row">
+        <div class="small-6 large-centered columns">
+          <h1>SLIDE 1</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="small-6 large-centered columns">
+          <h1>SLIDE 2</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="small-6 large-centered columns">
+          <h1>SLIDE 3</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="small-6 large-centered columns">
+          <h1>SLIDE 4</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="small-6 large-centered columns">
+          <h1>SLIDE 5</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="small-6 large-centered columns">
+          <h1>SLIDE 6</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="small-6 large-centered columns">
+          <h1>SLIDE 7</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="small-6 large-centered columns">
+          <h1>SLIDE 8</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="small-6 large-centered columns">
+          <h1>SLIDE 9</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="small-6 large-centered columns">
+          <h1>SLIDE 10</h1>
+        </div>
       </div>
     </div>
-    <div class="row">
-      <nav class="hide-for-small-only large-7 columns right" data-topbar>
-        <ul>
-          <li><a href="about.html">About<a></li>
-          <li><a href="media.html">Media</a></li>
-          <li><a href="resources.html">Resources</a></li>
-          <li><a href="sponsors.html">Sponsors</a></li>
-          <li><a href="involvement.html">Involvement</a></li>
-          <li><a href="robot.html">Robot</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
-    <div class="row">
-      <div class="small-12 small-centered medium-10 medium-centered large-8 large-centered columns panel radius">
-        <h1>Yo Foundation 5!</h1>
-        <ul>
-          <li>Sass compiling</li>
-          <li>Publishing to dist directory</li>
-          <li>Server with LiveReload</li>
-          <li>JSHint</li>
-          <li>Font Awesome (option)</li>
-        </ul>
-        <h1>Grunt tasks:</h1>
-        <ul>
-          <li>'grunt' - watching (Sass, Server on 127.0.0.1:9000 with LiveReload)</li>
-          <li>'grunt build' - Sass</li>
-          <li>'grunt validate-js' - JSHint</li>
-          <li>'grunt publish' - dist directory</li>
-          <li>'grunt server-dist' - server on 127.0.0.1:9001 - dist directory (preview only)</li>
-        </ul>
-        <h2 class="text-right">
-          <a href="https://github.com/juliancwirko/generator-zf5"><i class="fa fa-github"></i></a>
-        </h2>
-      </div>
-    </div>
-    
-    <script src="js/vendor/jquery.min.js"></script>
-    <script src="js/foundation/foundation.min.js"></script>
-    <script src="js/app.js"></script>
-  </body>
+  </div>
+
+  <p>IGNORE - JUST TO TEST VIEWPORT STUFF - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque faucibus lectus in orci pellentesque, at aliquam mauris imperdiet. Etiam bibendum molestie odio. In lacus dui, accumsan vel sem nec, convallis fringilla augue. Pellentesque sed ipsum commodo mi auctor vulputate vel a enim. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Quisque mollis rutrum est a aliquam. Ut massa enim, sodales eu turpis eu, suscipit tristique lectus. Sed malesuada pretium risus, id interdum mi venenatis quis.
+
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eu viverra tellus. Fusce sapien lorem, elementum a lacus vitae, ultricies bibendum sapien. Curabitur viverra, metus vel convallis iaculis, ante leo fringilla elit, et laoreet dui tortor et tortor. Nullam commodo sapien eget tempor mattis. Quisque tempor orci in mauris aliquam viverra. Nam congue sodales metus vel fringilla.
+
+Aliquam auctor augue id condimentum venenatis. Curabitur quis ligula molestie, dapibus urna sed, fermentum neque. Praesent eu libero in velit cursus gravida. Duis rutrum consequat vestibulum. Vivamus commodo pulvinar pretium. Nullam nec enim sit amet lorem ultricies pulvinar et a purus. Cras euismod consequat consectetur. Integer varius sagittis tellus in ullamcorper.
+
+Suspendisse eu aliquet tortor. Phasellus blandit, neque vel imperdiet ultricies, magna elit ullamcorper nisl, non tincidunt orci quam vel orci. Maecenas dictum augue non mi suscipit, eget accumsan nisl eleifend. Nam cursus erat non pretium pharetra. Etiam et laoreet lorem. Praesent quis faucibus enim. Suspendisse mollis sem eu massa adipiscing, id tempor nunc lobortis.
+
+Praesent eu velit hendrerit quam malesuada lacinia. Donec eget felis id diam vehicula lacinia. Duis ut rutrum augue, faucibus dictum orci. Curabitur luctus pellentesque scelerisque. Vivamus laoreet consequat vestibulum. Fusce iaculis gravida magna a cursus. Aliquam eget nisl in libero congue viverra eu interdum tellus. Donec bibendum tortor ac lacinia feugiat. Quisque auctor quis ante non molestie. Ut ante mauris, tempus eu lobortis eget, pharetra vitae nibh. Nunc non dignissim nibh. In hac habitasse platea dictumst.</p>
+  
+  <script src="js/vendor/jquery.min.js"></script>
+  <script src="js/foundation/foundation.min.js"></script>
+  <script src="js/flipsnap.min.js"></script>
+  <script src="js/app.js"></script>
+</body>
 </html>
