Improved layout of course section via scss grid mixins and reduced divs: - Tried to dry up the code a bit.

--- a/courseIndex.html
+++ b/courseIndex.html
@@ -40,81 +40,104 @@
   <section id="courses">
     <div class="row course">
       <div class="medium-12 columns">
-        <div class="thumbnail">
-          <h2>Web Development</h2>
-        </div>
+        <h2 class="title">Web Development</h2>
         <div class="video-slider">
-          <div class="next"></div>
+          <div class="next arrow fa"></div>
           <div class="slideshow">
-            <div class"slide">
-              <img src="#" class="thumbnail">
+            <div class="slide">
+              <img src="images/video.png" class="thumbnail">
               <h3>Intro to HTML</h3>
-            </div> 
+            </div>
+            <div class="slide">
+              <img src="images/video.png" class="thumbnail">
+              <h3>Intro to HTML</h3>
+            </div>
+            <div class="slide">
+              <img src="images/video.png" class="thumbnail">
+              <h3>Intro to HTML</h3>
+            </div>
+            <div class="slide">
+              <img src="images/video.png" class="thumbnail">
+              <h3>Intro to HTML</h3>
+            </div>
           </div>
+          <div class="past arrow fa"></div>
         </div>
       </div>
     </div>
     <div class="row course">
       <div class="medium-12 columns">
-        <div class="thumbnail">
-          <h2>Mechanical</h2>
-        </div>
+        <h2 class="title">Mechanical</h2>
         <div class="video-slider">
-          <div class="next"></div>
+          <div class="next arrow fa"></div>
           <div class="slideshow">
-            <div class"slide">
-              <img src="#" class="thumbnail">
+            <div class="slide">
+              <img src="images/video.png" class="thumbnail">
               <h3>Intro to HTML</h3>
-            </div> 
+            </div>
+            <div class="slide">
+              <img src="images/video.png" class="thumbnail">
+              <h3>Intro to HTML</h3>
+            </div>
           </div>
+          <div class="past arrow fa"></div>
         </div>
       </div>
     </div>
     <div class="row course">
       <div class="medium-12 columns">
-        <div class="thumbnail">
-          <h2>Electrical</h2>
-        </div>
+        <h2 class="title">Electrical</h2>
         <div class="video-slider">
-          <div class="next"></div>
+          <div class="next arrow fa"></div>
           <div class="slideshow">
-            <div class"slide">
-              <img src="#" class="thumbnail">
+            <div class="slide">
+              <img src="images/video.png" class="thumbnail">
               <h3>Intro to HTML</h3>
-            </div> 
+            </div>
+            <div class="slide">
+              <img src="images/video.png" class="thumbnail">
+              <h3>Intro to HTML</h3>
+            </div>
           </div>
+          <div class="past arrow fa"></div>
         </div>
       </div>
     </div>
     <div class="row course">
       <div class="medium-12 columns">
-        <div class="thumbnail">
-          <h2>Programming</h2>
-        </div>
+        <h2 class="title">Programming</h2>
         <div class="video-slider">
-          <div class="next"></div>
+          <div class="next arrow fa"></div>
           <div class="slideshow">
-            <div class"slide">
-              <img src="#" class="thumbnail">
+            <div class="slide">
+              <img src="images/video.png" class="thumbnail">
               <h3>Intro to HTML</h3>
-            </div> 
+            </div>
+            <div class="slide">
+              <img src="images/video.png" class="thumbnail">
+              <h3>Intro to HTML</h3>
+            </div>
           </div>
+          <div class="past arrow fa"></div>
         </div>
       </div>
     </div>
     <div class="row course">
       <div class="medium-12 columns">
-        <div class="thumbnail">
-          <h2>Buisness</h2>
-        </div>
+        <h2 class="title">Business</h2>
         <div class="video-slider">
-          <div class="next"></div>
+          <div class="next arrow fa"></div>
           <div class="slideshow">
-            <div class"slide">
-              <img src="#" class="thumbnail">
+            <div class="slide">
+              <img src="images/video.png" class="thumbnail">
               <h3>Intro to HTML</h3>
-            </div> 
+            </div>
+            <div class="slide">
+              <img src="images/video.png" class="thumbnail">
+              <h3>Intro to HTML</h3>
+            </div>
           </div>
+          <div class="past arrow fa"></div>
         </div>
       </div>
     </div>
